# aa-simplewiki

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: automated-checks.yml  pypi-release.yml
docs/: mkdocs.yml
docs/docs/: index.md  setup.md
example/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  models.py  tasks.py  urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/example/: base.html  index.html
example/tests/: __init__.py  test_example.py  test_integration.py
simplewiki/: __init__.py  admin.py  admin_helper.py  admin_helper_menus.py  admin_helper_sections.py  app_settings.py  apps.py  auth_hooks.py  models.py  old_views.py  tasks.py  urls.py  views.py  views_helper.py
simplewiki/management/commands/: simplewiki_migrate_v1_1.py  simplewiki_migrate_v1_3.py  simplewiki_migrate_v2_1.py
simplewiki/markdown/: renderer.py
simplewiki/migrations/: 0001_initial.py  0002_pageitem_page_title.py  0003_menuitem_icon.py  0004_pageitem_icon_alter_menuitem_icon_and_more.py  0005_alter_menuitem_icon_alter_pageitem_content_and_more.py  0006_rename_pageitem_sectionitem.py  0007_rename_page_title_sectionitem_section_title.py  0008_alter_general_options_alter_menuitem_icon_and_more.py  0009_remove_menuitem_name_menuitem_path.py  0010_rename_path_menuitem_name.py  0011_rename_name_menuitem_path.py  0012_menuitem_group.py  0013_alter_menuitem_group.py  0014_alter_menuitem_group_alter_menuitem_icon_and_more.py  0015_rename_menu_name_sectionitem_menu_path_and_more.py  0016_rename_section_title_sectionitem_title.py  0017_alter_sectionitem_content_alter_sectionitem_title.py  0018_rename_group_menuitem_groups.py  0019_alter_general_options.py  0020_menuitem_parent.py  0021_alter_menuitem_index.py  0022_menuitem_states.py  0023_alter_menuitem_groups.py  0023_menu_section.py  0024_alter_menu_parent.py  0024_alter_menuitem_icon_alter_menuitem_parent_and_more.py  0025_section_content_section_icon_section_index.py  0026_alter_menu_parent.py  0027_alter_section_menu.py  0028_section_last_edut.py  0029_rename_last_edut_section_last_edit.py  0030_alter_section_last_edit.py  0031_section_my_date.py  0032_rename_my_date_section_last_edit_date.py  0033_section_last_edit_id.py
simplewiki/old/: old_views.py
simplewiki/static/simplewiki/: custom.css  jquery.nestable.js  sw_toolbox.js  sw_toolbox_helper.js  sw_toolbox_textarea.js
simplewiki/templates/simplewiki/: _extra_css.html  admin_menus.html  admin_pages.html  admin_sections.html  base.html  dynamic_page.html  error.html  group_error.html  index.html  old_base.html  search.html  temp_base.html
simplewiki/templates/simplewiki/admin/: admin_menus.html  admin_sections.html
simplewiki/templates/simplewiki/admin/partials/: _create_menu.html  _edit_menu.html
simplewiki/templates/simplewiki/editor/: editor_menus.html  editor_sections.html  editor_sort.html  guide.html  old_editor_sort.html
simplewiki/templates/simplewiki/editor/guide_partials/: _guide_alert.html  _guide_block.html  _guide_gdrive.html  _guide_heading.html  _guide_image.html  _guide_list.html  _guide_table.html  _guide_text.html  _guide_video.html
simplewiki/templates/simplewiki/editor/partials/: _create_menu.html  _edit_menu.html
simplewiki/templates/simplewiki/editor/partials/menus/: _create_menu.html  _delete_menu.html  _edit_menu.html  _list_menus.html
simplewiki/templates/simplewiki/editor/partials/sections/: _create_section.html  _delete_section.html  _edit_section.html  _list_sections.html
simplewiki/templates/simplewiki/editor/partials/sections/toolbars/: _section_html_editor.html  _section_text_editor.html
simplewiki/templates/simplewiki/editor/partials/wysiwyg/: _editor_scripts.html  _toolbar.html  _toolbar_modals.html
simplewiki/templates/simplewiki/guides/: markdown.html
simplewiki/templates/simplewiki/guides/partials/: _markdown_alert.html  _markdown_block.html  _markdown_gdrive.html  _markdown_heading.html  _markdown_image.html  _markdown_images.html  _markdown_lists.html  _markdown_tables.html  _markdown_text.html  _markdown_texts.html  _markdown_video.html  _markdown_videos.html
simplewiki/templatetags/: custom_filters.py  markdown2_filters.py  markdown_filters.py
simplewiki/tests/: test_example.py
testauth/: settings.py
