[metadata]
name = aa_simplewiki
version = attr: simplewiki.__version__
description = SimpleWiki Plugin for Alliance Auth (GitHub Version)
long_description = file: README.md
long_description_content_type = text/markdown
author = Meowosaurus
author_email = info@bjsonnen.de
maintainer = Meowosaurus
maintainer_email = info@bjsonnen.de
license = GPL-3.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/meowosaurus/aa-simplewiki
keywords =
    allianceauth
    simplewiki
project_urls =
    Issue / Bug Reports = https://github.com/meowosaurus/aa-simplewiki/issues
    Changelog = https://github.com/meowosaurus/aa-simplewiki/blob/master/CHANGELOG.md

[options]
packages = find_namespace:
install_requires =
    allianceauth>=3.4.0
    mistune>=3.0.1
    allianceauth-app-utils>=1.20.1
python_requires = ~=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
include = simplewiki*

[options.package_data]
* = *
